--- a/doc/references.bib
+++ b/doc/references.bib
@@ -177,11 +177,47 @@
     primaryClass={cs.CL}
 }
 
+@misc{dai2019transformerxl,
+    title={Transformer-XL: Attentive Language Models Beyond a Fixed-Length Context},
+    author={Zihang Dai and Zhilin Yang and Yiming Yang and Jaime Carbonell and Quoc V. Le and Ruslan Salakhutdinov},
+    year={2019},
+    eprint={1901.02860},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@misc{lample2019crosslingual,
+    title={Cross-lingual Language Model Pretraining},
+    author={Guillaume Lample and Alexis Conneau},
+    year={2019},
+    eprint={1901.07291},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
 @misc{strubell2019energy,
     title={Energy and Policy Considerations for Deep Learning in NLP},
     author={Emma Strubell and Ananya Ganesh and Andrew McCallum},
     year={2019},
     eprint={1906.02243},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
+@misc{yang2019xlnet,
+    title={XLNet: Generalized Autoregressive Pretraining for Language Understanding},
+    author={Zhilin Yang and Zihang Dai and Yiming Yang and Jaime Carbonell and Ruslan Salakhutdinov and Quoc V. Le},
+    year={2019},
+    eprint={1906.08237},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
+@misc{lan2019albert,
+    title={ALBERT: A Lite BERT for Self-supervised Learning of Language Representations},
+    author={Zhenzhong Lan and Mingda Chen and Sebastian Goodman and Kevin Gimpel and Piyush Sharma and Radu Soricut},
+    year={2019},
+    eprint={1909.11942},
     archivePrefix={arXiv},
     primaryClass={cs.CL}
 }
