doc: abstract, acknowledgements, futurework, conclusion

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -28,6 +28,7 @@
 \pagenumbering{roman}
 \pagestyle{plain}
 \include{sections/abstract}
+\include{sections/acknowledgements}
 
 % the table of contents and the lists of figures and tables
 \pagenumbering{arabic}
@@ -43,7 +44,8 @@
 \include{sections/5-methodology}
 \include{sections/6-development}
 \include{sections/7-results}
-\include{sections/8-conclusion}
+\include{sections/8-futurework}
+\include{sections/9-conclusion}
 
 % the bibliography
 \bibliographystyle{unsrt}	% only numbers
