--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -4,14 +4,12 @@
 %
 % Abstract
 
-\section*{Abstract}
+\begin{center}
+    \huge
+    Abstract
+    \vspace{1cm}
+\end{center}
 
-An \emph{abstract} is a brief summary of a research article, thesis, review, 
-conference proceeding or any in-depth analysis of a particular subject or 
-discipline, and is often used to help the reader quickly ascertain the paper's 
-purpose. When used, an abstract always appears at the beginning of a manuscript, 
-acting as the point-of-entry for any given academic paper or patent application. 
-Abstracting and indexing services for various academic disciplines are aimed at 
-compiling a body of literature for that particular subject.
+Historically, many ways have been used to feed language to machines. Separating sentences, separating words, characters, each has its own advantages and drawbacks. In recent times, subword units have gained popularity, as a middle point between words and characters. However, this is based on the assumption that sentences are separated into words, that is, that space is a separating factor. This thesis explores the research done until the time of writing, describing various tokenization methods, replication of BPE and BPE dropout results, and also incorporates the possibility to create BPE units without spaces, as well as an improvement over the original BPE algorithm.
 
 % end of file
