doc: declaration by the candidate

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -28,6 +28,7 @@
 \pagenumbering{roman}
 \pagestyle{plain}
 \include{sections/abstract}
+\include{sections/declaration}
 \include{sections/acknowledgements}
 
 % the table of contents and the lists of figures and tables
