--- a/doc/sections/titlepage.tex
+++ b/doc/sections/titlepage.tex
@@ -26,7 +26,7 @@
 		{Matriculation number: 12006250 \par}
 		\vfill
 		\vspace{1.5cm}
-		{\scshape Supervisor: Masoud Jalil Sabet \par}
+		{\scshape Supervisor: Masoud Jalili Sabet \par}
 		{\scshape Supervisor: Prof Dr.Hinrich Schütze \par}
 		{Submitted on: 2020 August \par} %\today
 		\vspace{1cm}
